--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,25 @@
+appdirs==1.4.4
+APScheduler==3.6.3
 attrs==21.4.0
 autobahn==19.11.2
 Automat==20.2.0
+cachetools==4.2.2
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.11
+colorama==0.4.4
 constantly==15.1.0
 cryptography==36.0.1
 Deprecated==1.2.13
 enum34==1.1.10
+google-api-core==2.5.0
+google-auth==2.6.0
+google-cloud-core==2.2.2
+google-cloud-storage==2.1.0
+google-crc32c==1.3.0
+google-resumable-media==2.2.1
+googleapis-common-protos==1.54.0
+gunicorn==20.1.0
 hyperlink==21.0.0
 idna==3.3
 incremental==21.3.0
@@ -17,20 +29,28 @@ multitasking==0.0.10
 numpy==1.22.1
 packaging==21.3
 pandas==1.4.0
+protobuf==3.19.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
 pyOpenSSL==22.0.0
 pyparsing==3.0.7
 python-dateutil==2.8.2
+python-telegram-bot==13.11
 pytz==2021.3
+pytz-deprecation-shim==0.1.0.post0
 redis==4.1.2
 requests==2.27.1
+rsa==4.8
 service-identity==21.1.0
 six==1.16.0
+telegram-send==0.25
+tornado==6.1
 Twisted==21.7.0
 txaio==21.2.1
 typing_extensions==4.0.1
+tzdata==2021.5
+tzlocal==4.1
 urllib3==1.26.8
 wrapt==1.13.3
 yfinance==0.1.70
